# giv_py

./: .coverage  .gitignore  README.md  app-spec-checklist.md  app-spec.md  build_all_platforms.py  build_binary.py  code-review.md  failing-tests-checklist.md  install.sh  known-issues.md  migrate_config.py  ollama-refactor.md  package-todos.md  pyproject.toml  pytest.ini  run_tests.py  setup.py  test-fixture-updates.md  test_git.py  test_isolation_demo.py  test_metadata.py  test_templates.py
.github/: copilot-instructions.md
.github/workflows/: build-ci.yml  (+3 more)
.giv/: config
docs/: app-spec-checklist.md  app-spec-review.md  app-spec.md  architecture.md  build-system-review.md  configuration.md  how-to-publish.md  installation-locations.md  installation.md  roadmap.md
giv/: cli.py  config.py  constants.py  git_utils.py  llm_utils.py  main.py  markdown_utils.py  output_utils.py  project_metadata.py  template_utils.py
giv_cli/: __init__.py  __main__.py  cli.py  config.py  git_utils.py  llm_utils.py  main.py  markdown_utils.py  output_utils.py  template_utils.py
notes/: refactor-todos.md
tests/: conftest.py  test_cli.py  test_cli_comprehensive.py  test_cli_integration.py  test_commands_integration.py  test_compatibility.py  test_config.py  test_config_comprehensive.py  test_constants.py  test_errors.py  test_git_utils.py  test_lib_llm.py  test_lib_metadata.py  test_lib_output.py  test_lib_templates.py  test_lib_todo.py  test_llm_utils.py  test_main.py  test_main_repository.py  test_markdown_utils.py  test_repository.py  test_version.py  test_versioned_output.py
(+18 files in other folders)
