[tool.poetry]
name = "giv_cli"
version = "0.1.0"
description = "Port of the giv Bash CLI to Python"
authors = ["AutoPorter <porter@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]
pytest = "^8.0.0"
pytest-mock = "^3.6.1"

[tool.poetry.scripts]
giv = "giv_cli.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"